fix(<GiftCard />): :lipstick: Añadir overflow para evitar que el texto sobresalga del card

--- a/desktop-app/components/common/cards/gift-card/styles.module.scss
+++ b/desktop-app/components/common/cards/gift-card/styles.module.scss
@@ -17,12 +17,14 @@
 }
 
 .Title {
+  overflow: hidden;
   font-size: 2.25em !important;
   line-height: 1.366;
   margin-bottom: 0;
 }
 
 .SpecialText {
+  overflow: hidden;
   margin-top: 1.428571428571429em;
   font-size: 0.875rem;
   max-width: 40ch;
